--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
-  <link rel="stylesheet" href="style.css">
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -16,24 +15,26 @@
   </style>
 </head>
 <body>
-  <article>
-    <figure>
-      <img src="assets/images/avatar-jessica.jpeg" alt="" srcset="">
-      <figcaption>
+  <main>
+    <article>
+      <header>
+        <img src="assets/images/avatar-jessica.jpeg" alt="social link avatar">
         <h1>Jessica Randall</h1>
-        <h2>London, United Kingdom</h2>
+        <p>London, United Kingdom</p>
+      </header>
+      <section>
         <p>"Front-end developer and avid reader."</p>
-      </figcaption>
-    </figure>
-    <section>
-      <a href="#">GitHub</a>
-      <a href="#">Frontend Mentor</a>
-      <a href="#">LinkedIn</a>
-      <a href="">Twitter</a>
-      <a href="#">Instagram</a>
-    </section>
-  </article>
-    
+        <ul>
+          <li><a href="#">GitHub</a></li>
+          <li><a href="#">Frontend Mentor</a></li>
+          <li><a href="#">LinkedIn</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="design/mobile-design.jpg" download>Instagram</a></li>
+        </ul>
+      </section>
+    </article>
+  </main>
+
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Tafadzwa Ruzvidzo</a>.
